# cookiecutter_streamlit

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/src/streamlit_app/pages/: data_analysis.py  home.py
{{ cookiecutter.project_slug }}/src/utils/: data_loader.py  data_processor.py  my_logger.py
{{ cookiecutter.project_slug }}/tests/: test_my_logger.py
{{cookiecutter.__folder_name}}/: .gitignore  Makefile  requirements.txt
{{cookiecutter.__folder_name}}/src/streamlit_app/pages/: data_analysis.py  visualization.py
{{cookiecutter.project_slug}}/: Makefile  README.md
{{cookiecutter.project_slug}}/src/streamlit_app/utils/: data_processor.py
{{cookiecutter.project_slug}}/src/tests/: test_data_loader.py
