[project]
name = "cookiecutter-generic-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "name",email = "email@email.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "uv (>=0.6.14,<0.7.0)",
    "py-make (>=0.1.2,<0.2.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

